# tractor

./: .clang-format  .dockerignore  .env  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  bashrc  bootstrap-apt.sh  bootstrap-venv.sh  bootstrap.sh  buf.yaml  docker-compose.yml  env.sh  pytest.ini  requirements-dev.txt  requirements.txt  setup.bash
.github/ISSUE_TEMPLATE/: bug_report.md  design_topic.md
.github/workflows/: main.yml  master.yml  pr.yml  release-tgz.yml  release.yml
app/frontend/: .eslintrc.json  README.md  package.json  tsconfig.json  webpack.config.js
app/frontend/public/: index.html
app/frontend/src/: App.scss  config.ts  config.tsx  index.js  index.tsx  styles.css  theme.scss
app/frontend/test/: api.int.test.ts
app/gst-webrtc/: .gitignore  Makefile  readme.md  webrtc-unidirectional-h264.c
app/rtkbase/: Dockerfile.template  README.md  m8t_1hz_usb.cmd
app/tractor/: Dockerfile.frontend  Dockerfile.rtkrover  README.md  docker-compose.dev.yml  docker-compose.yml  rtkrover.sh
app/tractor/canbus/: Dockerfile  main.sh
app/tractor/driver/: Dockerfile  bringup.sh  bringup_bluetooth.sh  (+6 more)
cmake/: FindGlog.cmake  farm_ng_modules.cmake  go.mod.template  package.json.template
cpp/farm_ng/: CMakeLists.txt  blobstore.cpp  blobstore.h  calibrate_apriltag_rig.cpp  calibrate_base_to_camera.cpp  calibrate_multi_view_apriltag_rig.cpp  calibrator.cpp  capture_calibration_dataset.cpp  capture_video_dataset.cpp  event_log.cpp  event_log.h  event_log_reader.cpp  event_log_reader.h  extrinsic_calibrator.cpp  frame_grabber.cpp  frame_grabber.h  image_loader.cpp  image_loader.h  image_utils.h  init.cpp  init.h  ipc.cpp  ipc.h  ipc_logger.cpp  log_playback.cpp  sophus_protobuf.h  tracking_camera.cpp  tracking_study.cpp  video_streamer.cpp  video_streamer.h
cpp/farm_ng/calibration/: CMakeLists.txt  apriltag.cpp  apriltag.h  apriltag_rig_calibrator.cpp  apriltag_rig_calibrator.h  apriltag_test.cpp  base_to_camera_calibrator.cpp  base_to_camera_calibrator.h  base_to_camera_calibrator_driver.cpp  camera_model.cpp  camera_model.h  camera_model_test.cpp  eigen_cv.h  epipolar.h  flow_book_keeper.cpp  flow_book_keeper.h  kinematics.h  local_parameterization.cpp  local_parameterization.h  local_parameterization_se3.cpp  local_parameterization_se3.h  local_parameterization_se3_test.cpp  multi_view_apriltag_rig_calibrator.cpp  multi_view_apriltag_rig_calibrator.h  pose_utils.cpp  pose_utils.h  solver.h  solver_test.cpp  time_series.cpp  time_series.h  visual_odometer.cpp  visual_odometer.h
design/: README.md  conventions.md  frontend.md  serialization.md
docker/: README.md  base.Dockerfile  docker-compose.yml  webservices.Dockerfile
docs/: app.md  readme.md
go/genproto/: .gitignore  go.mod  go.sum
go/webrtc/: Makefile  go.mod  go.sum
jetson/: 20-usb-bus.rules  bringup.sh  camera.sh  install-dev.sh  install.sh  logger.sh  programd.sh  readme.md  steering.sh  tractor-bringup.service  tractor-camera.path  tractor-camera.service  tractor-logger.path  tractor-logger.service  tractor-programd.path  tractor-programd.service  tractor-steering.path  tractor-steering.service  tractor-webservices.path  tractor-webservices.service  tractor.path  tractor.service  tractor.sh  uninstall.sh  webservices.sh
jetson/metrics/: prometheus.yml
modules/calibration/: CMakeLists.txt
modules/calibration/cpp/farm_ng/: CMakeLists.txt  calibrate_apriltag_rig.cpp  calibrate_multi_view_apriltag_rig.cpp
modules/calibration/cpp/farm_ng/calibration/: CMakeLists.txt  apriltag_rig_calibrator.cpp  apriltag_rig_calibrator.h  epipolar.cpp  epipolar.h  flow_book_keeper.cpp  flow_book_keeper.h  kinematics.h  local_parameterization.cpp  local_parameterization.h  local_parameterization_test.cpp  multi_view_apriltag_rig_calibrator.cpp  multi_view_apriltag_rig_calibrator.h  solver_test.cpp  visual_odometer.cpp  visual_odometer.h
modules/core/: CMakeLists.txt
modules/core/cpp/farm_ng/core/: CMakeLists.txt  blobstore.cpp  blobstore.h  event_log.cpp  event_log.h  event_log_reader.cpp  event_log_reader.h  init.cpp  init.h  ipc.cpp  ipc.h
modules/frontend/: CMakeLists.txt
modules/motors/: CMakeLists.txt
modules/perception/: CMakeLists.txt
modules/perception/cpp/farm_ng/perception/: CMakeLists.txt  apriltag.cpp  apriltag.h  apriltag_test.cpp  camera_model.cpp  camera_model.h  camera_model_test.cpp  eigen_cv.h  frame_grabber.cpp  frame_grabber.h  frame_grabber_intel.cpp  image_loader.cpp  image_loader.h  image_utils.h  pose_utils.cpp  pose_utils.h  sophus_protobuf.h  time_series.cpp  time_series.h  tracking_camera_utils.cpp  tracking_camera_utils.h  video_streamer.cpp  video_streamer.h
modules/tractor/: CMakeLists.txt
modules/tractor/cpp/farm_ng/tractor/: CMakeLists.txt  base_to_camera_calibrator.cpp  base_to_camera_calibrator.h
protos/: CMakeLists.txt  google  resource.ts.patch  validate
protos/farm_ng_proto/tractor/v1/: apriltag.proto  calibrate_apriltag_rig.proto  calibrate_base_to_camera.proto  calibrate_multi_view_apriltag_rig.proto  calibrator.proto  camera_model.proto  capture_calibration_dataset.proto  capture_video_dataset.proto  geometry.proto  image.proto  io.proto  motor.proto  playback_service.proto  program_supervisor.proto  resource.proto  rtk.proto  status.proto  status_service.proto  steering.proto  tracking_camera.proto  tractor.proto  webrtc_proxy_service.proto
protos/farmng/tractor/v1/: geometry.proto  status.proto  status_service.proto  waypoint.proto  waypoint_service.proto
python/farm_ng/: blobstore.py  calibrator_client.py  canbus.py  config.py  controller.py  ipc.py  ipc_websocket_bridge.py  ipc_websocket_client.py  joystick.py  joystick_teleop.py  kinematics.py  metrics_demo.py  motor.py  multi_view_rig.py  periodic.py  pose_vis_toy.py  program_supervisor.py  proio_utils.py  proto_utils.py  rtkcli.py  steering.py  tracking_camera.py  tractor.py  wifi.py
python/validate/: validator.py
scripts/: Dockerfile.protoc  Dockerfile.test-integration  build-protos.sh  collect-logs.sh  switch.sh  test-integration.sh
(+372 files in other folders)
